--- a/news.html
+++ b/news.html
@@ -117,7 +117,7 @@
 			for(i = 0; i < nodes.data.length; i++){
 				html += `<div class="item">
 						  <a href=${nodes.data[i].url}><img src=${nodes.data[i].img_url}></a>
-				          <h4>${nodes.data[i].short_name}</h4>
+				          <h4>${nodes.data[i].name}</h4>
 				          <hr>
 				          <p>${nodes.data[i].short_intro}</p>
 						</div>
